@@ -40,3 +40,6 @@
 #define HWCAP_ARM_VFPv4		65536
 #define HWCAP_ARM_IDIVA		131072
 #define HWCAP_ARM_IDIVT		262144
+#define HWCAP_ARM_VFPD32	524288
+#define HWCAP_ARM_LPAE		1048576
+#define HWCAP_ARM_EVTSTRM	2097152
