@@ -46,13 +46,13 @@
 #if !defined PROCINFO_DECL && defined SHARED
   ._dl_arm_cap_flags
 #else
-PROCINFO_CLASS const char _dl_arm_cap_flags[19][10]
+PROCINFO_CLASS const char _dl_arm_cap_flags[22][10]
 #endif
 #ifndef PROCINFO_DECL
 = {
     "swp", "half", "thumb", "26bit", "fastmult", "fpa", "vfp", "edsp",
     "java", "iwmmxt", "crunch", "thumbee", "neon", "vfpv3", "vfpv3d16",
-    "tls", "vfpv4", "idiva", "idivt",
+    "tls", "vfpv4", "idiva", "idivt", "vfpd32", "lpae", "evtstrm",
   }
 #endif
 #if !defined SHARED || defined PROCINFO_DECL
